fix letter spacing menutop

--- a/web_static/styles.less
+++ b/web_static/styles.less
@@ -299,6 +299,7 @@ body{height: 100%; }
         				height:auto;
         				line-height: 100%;
         				font-size: 11px;
+        				letter-spacing: 0.02em;
         				
           				&:first-child {
                  			left: auto;
